# tunnel-ai

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_planner.py
agents/: __init__.py  executor.py  generator.py  healer.py  planner.py  validator.py
agents/utils/: __init__.py  page_analyzer.py
api/: __init__.py  main.py
config/: settings.py
core/: browserbase_client.py  types.py
examples/: analyze_page.py
orchestrator/: __init__.py  test_workflow.py
templates/: playwright_templates.py  test_examples.json
